src/main/java/com/example/stream/spring/courses/reactive/example/model/error/InstructorDeleteOk.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record InstructorDeleteOk() implements InstructorSuccess {
}
